--- a/index.html
+++ b/index.html
@@ -7,216 +7,68 @@
     <title>Analytics</title>
 </head>
 <body>
-<nav>
-    <ul class="header">
-        <li class="left"><i class="fas fa-signal"></i></li>
-        <li class="middle">B2B-Sales-Orders analysis</li>
-        <li class="right"></li>
-    </ul>
-</nav>
-<div class="contents">
-    <div class="menu">
-        <ul class="items">
-            <li class="item selected" data-target="10"><a href="#"><span class="fas fa-server" title="필드"></span></a></li>
-            <li class="item" data-target="20"><a href="#"><span class="fas fa-chart-bar" title="시각화"></span></a></li>
-            <!--<li class="item" data-target="30"><a href="#"><span class="fas fa-filter" title="필터"></span></a></li>-->
-        </ul>
-        <div class="logout"><a href="#"><span class="fas fa-sign-out-alt" title="로그아웃"></span></a></div>
-    </div>
-    <div class="panel field" data-target="10">
-        <div class="panel-title">
-            <span>필드 목록</span>
-        </div>
-        <div class="panel-contents" data-target="100">
-            <div class="contents-search"><input type="text" placeholder="검색"/></div>
-            <ul class="contents-list top-list" data-target="101">
-                <li><span class="contents-item"><span class="fas fa-caret-down"></span><span class="data-field">제주도청</span></span>
-                    <ul class="nested">
-                        <li class="selected" data-key="제주도청/온도 MIN">온도 MIN</li>
-                        <li data-key="제주도청/VOCS MIN">VOCS MIN</li>
-                    </ul>
-                </li>
-                <li><span class="contents-item"><span class="fas fa-caret-down"></span><span class="data-field">성산민속마을</span></span>
-                    <ul class="nested">
-                        <li>온도 MIN</li>
-                        <li>VOCS MIN</li>
-                        <li>소음 AVG</li>
-                    </ul>
-                </li>
-                <li><span class="contents-item"><span class="fas fa-caret-down"></span><span class="data-field">그레이스 호텔</span></span>
-                    <ul class="nested">
-                        <li>온도 MIN</li>
-                        <li>VOCS MIN</li>
-                        <li>소음 AVG</li>
-                        <li>통합쾌적지수 AVG</li>
-                    </ul>
-                </li>
-                <li><span class="contents-item"><span class="fas fa-caret-down"></span><span class="data-field">마리나 사거리</span></span>
-                    <ul class="nested">
-                        <li>VOCS MAX</li>
-                        <li>소음 MAX</li>
-                        <li>통합쾌적지수 AVG</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="panel-grip" data-target="101">
-            <span class="fas fa-grip-lines"></span>
-            <h2></h2>
-        </div> <!--resize-->
-        <div class="panel-contents" data-target="110">
-            <ul class="contents-list measure" data-target="110">
-                <li class="selected"><span class="fas fa-calendar-alt"></span><span class="data-field">날짜</span></li>
-                <div class="filter date-filter">
-                    <label>날짜 유형 :</label>
-                    <select class="date-type">
-                        <option value="">-- 선택 --</option>
-                        <option value="year">Year</option>
-                        <option value="month">Month</option>
-                        <option value="day">Day</option>
-                        <option value="hour">Hour</option>
-                    </select>
-                    <select class="date-range">
-                        <option value="">-- 선택 --</option>
-                        <option value="between">Between</option>
-                        <option value="after">After</option>
-                        <option value="before">Before</option>
-                    </select>
-                    <div data-date-detail="between">
-                        <label>시작일자 :</label>
-                        <input type="text" class="startDate" placeholder="YYYY-MM-DD HH:MI:SS" />
-                        <label>종료일자 :</label>
-                        <input type="text" class="endDate" placeholder="YYYY-MM-DD HH:MI:SS" />
-                    </div>
-                    <!--<div data-date-detail="afterbefore">-->
-                    <!--<label>Date :</label>-->
-                    <!--<input type="text">-->
-                    <!--</div>-->
-                </div>
-                <li><span class="fas fa-map-marker-alt"></span><span class="data-field">위치</span></li>
-            </ul>
-        </div>
-    </div>
-    <div class="panel visual hide" data-target="20">
-        <div class="panel-title">
-            <span>시각화</span>
-        </div>
-        <div class="panel-contents contents-table contents-list" data-target="200">
-            <ul>
-                <li><img src="images/icon_chart_column.png"></li>
-                <li><img src="images/icon_chart_bar.png"></li>
-                <li><i class="fas fa-chart-area"></i></li>
-                <li><i class="fas fa-table"></i></li>
-            </ul>
-            <ul>
-                <li><i class="fas fa-chart-pie"></i></li>
-                <li><i class="fas fa-chart-bar"></i></li>
-                <li><i class="fas fa-chart-area"></i></li>
-                <li><i class="fas fa-table"></i></li>
-            </ul>
-            <ul>
-                <li><i class="fas fa-chart-pie"></i></li>
-                <li><i class="fas fa-chart-bar"></i></li>
-                <li><i class="fas fa-chart-area"></i></li>
-                <li><i class="fas fa-table"></i></li>
-            </ul>
-        </div>
-        <div class="panel-grip" data-target="200">
-            <span class="fas fa-grip-lines"></span>
-            <h2></h2>
-        </div> <!--resize-->
-        <div class="panel-contents" data-target="210">
-            <div class="panel-subtitle">
-                <span>형식</span>
-            </div>
-            <ul class="contents-list format" data-target="211">
-                <li>
-                    <div class="filter">
-                        <select class="date-format">
-                            <option value="">-- 선택 --</option>
-                            <option value="number">Number</option>
-                            <option value="currency">Currency</option>
-                            <option value="unit">Unit</option>
-                        </select>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="panel-grip" data-target="211">
-            <span class="fas fa-grip-lines"></span>
-            <h2></h2>
-        </div> <!--resize-->
-        <div class="panel-contents" data-target="220">
-            <div class="panel-subtitle">
-                <span>필터</span>
-            </div>
-            <ul class="contents-list measure" data-target="220">
-                <li class="selected"><span class="fas fa-calendar-alt"></span><span class="data-field">날짜</span></li>
-                <div class="filter date-filter">
-                    <label>날짜 유형 :</label>
-                    <select class="date-type">
-                        <option value="">-- 선택 --</option>
-                        <option value="year">Year</option>
-                        <option value="month">Month</option>
-                        <option value="day">Day</option>
-                        <option value="hour">Hour</option>
-                    </select>
-                    <select class="date-range">
-                        <option value="">-- 선택 --</option>
-                        <option value="between">Between</option>
-                        <option value="after">After</option>
-                        <option value="before">Before</option>
-                    </select>
-                    <div data-date-detail="between">
-                        <label>시작일자 :</label>
-                        <input type="text" class="startDate" placeholder="YYYY-MM-DD HH:MI:SS" />
-                        <label>종료일자 :</label>
-                        <input type="text" class="endDate" placeholder="YYYY-MM-DD HH:MI:SS" />
-                    </div>
-                    <!--<div data-date-detail="afterbefore">-->
-                    <!--<label>Date :</label>-->
-                    <!--<input type="text">-->
-                    <!--</div>-->
-                </div>
-                <li><span class="fas fa-list-ol"></span><span class="data-field">숫자</span></li>
-                <div class="filter date-filter">
-                    <label>범주 :</label>
-                    <select class="date-type">
-                        <option value="">-- 선택 --</option>
-                        <option value="equal">Equals</option>
-                        <option value="ne">Does not equal</option>
-                        <option value="gt">Greater than</option>
-                        <option value="lt">Less than</option>
-                        <option value="gte">Greater than or equal to</option>
-                        <option value="lte">Less than or equal to</option>
-                        <option value="between">Between</option>
-                    </select>
-                    <div data-date-detail="between">
-                        <label>최솟값 :</label>
-                        <input type="number" class="startDate" placeholder="숫자 입력" />
-                        <label>최댓값 :</label>
-                        <input type="number" placeholder="숫자 입력" />
-                    </div>
-                    <!--<div data-date-detail="equal">-->
-                    <!--<input type="number" placeholder="숫자 입력" />-->
-                    <!--</div>-->
-                </div>
-            </ul>
-        </div>
-    </div>
-    <!--위젯 배치-->
+<div class="container">
     <div class="main">
-        <ul>
-            <li>
-                <div></div>
-            </li>
-        </ul>
+        <!--header-->
+        <nav>
+            <ul class="header">
+                <li class="left"><span class="fas fa-signal"></span></li>
+                <li class="middle"><input type="text" class="questions" placeholder="대시보드나 위젯 이름을 검색할 수 있습니다"/></li>
+                <li class="right"><img src="images/user.png"><span>김예진<span class="fas fa-caret-down"></span></span></li>
+            </ul>
+            <div id="myDropdown" class="dropdown">
+                <a href="#">계정</a>
+                <a href="#">로그아웃</a>
+            </div>
+        </nav>
+        <!--//header-->
+        <!--contents-->
+        <div class="contents">
+            <!--left menu-->
+            <div class="menu">
+                <ul class="items">
+                    <li class="item selected"><a href="javascript:void(0);"><span class="fas fa-tachometer-alt" title="Dashboard"></span></a></li>
+                    <li class="item"><a href="javascript:void(0);"><span class="fas fa-server" title="Datasource Manager"></span></a></li>
+                </ul>
+            </div>
+            <!--dashboard-->
+            <div class="dashbd">
+                <select class="name">
+                    <option>제주시 환경정보 기초통계</option>
+                </select>
+                <ul class="grid">
+                    <li>
+                        <div class="widget">
+                            <div class="widget-header">
+                                <div class="widget-name">
+                                    <span>14~17년 제주시 적설량 비교</span>
+                                </div>
+                                <div class="widget-control" title="위젯 수정">
+                                    <span class="fas fa-ellipsis-v"></span>
+                                </div>
+                            </div>
+                            <div class="widget-content" id="container"></div>
+                        </div>
+                    </li>
+                </ul>
+                <!--위젯버튼-->
+                <div class="widget-button">
+                    <div class="add-widget" title="위젯 추가"><span class="fa fa-plus"></span></div>
+                </div>
+                <!--//위젯버튼-->
+            </div>
+        </div>
+        <!--//contents-->
     </div>
-    <!--//위젯 배치-->
 </div>
 <footer>
 </footer>
 
 <script src="dashbd.js" type="text/javascript"></script>
+<!--임시세팅, 삭제 필요-->
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/series-label.js"></script>
+<script src="chart.js" type="text/javascript"></script>
+<!--//임시세팅, 삭제 필요-->
 </body>
 </html>
