--- a/detail.html
+++ b/detail.html
@@ -16,10 +16,6 @@
                 <li class="middle"><input type="text" class="questions" placeholder="대시보드나 위젯 이름을 검색할 수 있습니다"/></li>
                 <li class="right"><img src="images/user.png"><span>김예진<span class="fas fa-caret-down"></span></span></li>
             </ul>
-            <div id="myDropdown" class="dropdown">
-                <a href="#">계정</a>
-                <a href="#">로그아웃</a>
-            </div>
         </nav>
         <!--//header-->
         <!--contents-->
@@ -32,32 +28,10 @@
                 </ul>
             </div>
             <!--dashboard-->
-            <div class="dashbd">
-                <select class="name">
-                    <option>제주시 환경정보 기초통계</option>
-                </select>
-                <ul class="grid">
-                    <li>
-                        <div class="widget">
-                            <div class="widget-header">
-                                <div class="widget-name">
-                                    <span>14~17년 제주시 적설량 비교</span>
-                                </div>
-                                <div class="widget-control" title="위젯 수정">
-                                    <a href="detail.html" target="_self">
-                                        <span class="fas fa-ellipsis-v"></span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="widget-content" id="container"></div>
-                        </div>
-                    </li>
-                </ul>
-                <!--위젯버튼-->
-                <div class="widget-button">
-                    <div class="add-widget" title="위젯 추가"><span class="fa fa-plus"></span></div>
-                </div>
-                <!--//위젯버튼-->
+            <div class="dashbd editmode">
+                <div class="widget-content" id="container"></div>
+                <div class="panel-left"></div>
+                <div class="panel-right"></div>
             </div>
         </div>
         <!--//contents-->
