--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul class="header">
                 <li class="left"><span class="fas fa-signal"></span></li>
-                <li class="middle"><input type="text" class="questions" placeholder="대시보드나 위젯 이름을 검색할 수 있습니다"/></li>
+                <li class="middle"><input type="text" class="questions" placeholder="대시보드나 위젯 이름을 검색할 수 있습니다."/></li>
                 <li class="right"><img src="images/user.png"><span>김예진<span class="fas fa-caret-down"></span></span></li>
             </ul>
             <div id="myDropdown" class="dropdown">
