--- a/project/analyticsDashboard/detail.html
+++ b/project/analyticsDashboard/detail.html
@@ -13,8 +13,8 @@
         <nav>
             <ul class="header">
                 <li class="left"><span class="fas fa-signal"></span></li>
-                <li class="middle back"><span><span class="fas fa-undo"></span> 이전 화면으로 돌아가기</span></li>
-                <li class="right"><img src="images/user.png"><span>김예진<span class="fas fa-caret-down"></span></span></li>
+                <li class="middle back"><a href="index.html" target="_self"><span><i class="fas fa-undo"></i> 이전 화면으로 돌아가기</span></a></li>
+                <li class="right"><img src="./images/user.png"><span>김예진<span class="fas fa-caret-down"></span></span></li>
             </ul>
         </nav>
         <!--//header-->
@@ -207,11 +207,11 @@
 <footer>
 </footer>
 
-<script src="dashbd.js" type="text/javascript"></script>
+<script src="./dashbd.js" type="text/javascript"></script>
 <!--Remove-->
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/series-label.js"></script>
-<script src="chart.js" type="text/javascript"></script>
+<script src="./chart.js" type="text/javascript"></script>
 <!--//Remove-->
 </body>
 </html>
