--- a/project/analyticsDashboard/index.html
+++ b/project/analyticsDashboard/index.html
@@ -10,33 +10,34 @@
 <div class="container">
     <div class="main">
         <!--header-->
-        <nav>
-            <ul class="header">
+        <header>
+            <ul>
                 <li class="left"><span class="fas fa-signal"></span></li>
                 <li class="middle"><input type="text" class="questions" placeholder="대시보드나 위젯 이름을 검색할 수 있습니다."/></li>
                 <li class="right"><img src="./images/user.png"><span>김예진<span class="fas fa-caret-down"></span></span></li>
             </ul>
-            <div id="myDropdown" class="dropdown">
+            <div class="dropdown">
                 <a href="#">계정</a>
                 <a href="#">로그아웃</a>
             </div>
-        </nav>
+        </header>
         <!--//header-->
         <!--contents-->
         <div class="contents">
             <!--left menu-->
-            <div class="menu">
-                <ul class="items">
-                    <li class="item selected"><a href="javascript:void(0);"><span class="fas fa-tachometer-alt" title="Dashboard"></span></a></li>
-                    <li class="item"><a href="javascript:void(0);"><span class="fas fa-server" title="Datasource Manager"></span></a></li>
+            <nav>
+                <ul>
+                    <li class="selected"><a href="javascript:void(0);"><span class="fas fa-tachometer-alt" title="Dashboard"></span></a></li>
+                    <li><a href="javascript:void(0);"><span class="fas fa-server" title="Datasource Manager"></span></a></li>
                 </ul>
-            </div>
+            </nav>
+            <!--//left menu-->
             <!--dashboard-->
-            <div class="dashbd">
-                <select class="name">
+            <article>
+                <select class="dashbd-name">
                     <option>제주시 환경정보 기초통계</option>
                 </select>
-                <ul class="grid">
+                <ul class="widget-grid">
                     <li>
                         <div class="widget">
                             <div class="widget-header">
@@ -54,11 +55,11 @@
                     </li>
                 </ul>
                 <!--위젯버튼-->
-                <div class="widget-button">
+                <div class="widget-button-group">
                     <div class="add-widget" title="위젯 추가"><span class="fa fa-plus"></span></div>
                 </div>
                 <!--//위젯버튼-->
-            </div>
+            </article>
         </div>
         <!--//contents-->
     </div>
