--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <li>
             Analytics Dashboard 시각화 설계
             <ul>
-                <li>작업일자: 2019.01.18~2019.01.26</li>
-                <li><a href="project/analyticsDashboard/index.html" target="_blank">바로가기</a></li>
+                <li>작업일자: 2019.01.18~2019.01.28</li>
+                <li>대시보드 메인 <a href="project/analyticsDashboard/index.html" target="_blank">바로가기</a></li>
+                <li>대시보드 위젯 상세보기 <a href="project/analyticsDashboard/detail.html" target="_blank">바로가기</a></li>
             </ul>
         </li>
     </ul>
