- 위젯명 입력 input box 추가 - mac chrome 버전에 호환 가능하도록 input box css 수정

--- a/project/analyticsDashboard/detail.html
+++ b/project/analyticsDashboard/detail.html
@@ -30,7 +30,12 @@
             <!--//left menu-->
             <!--dashboard-->
             <article class="detail">
-                <div class="widget-content" id="container"></div> <!--chart-->
+                <div>
+                    <div class="widget-name">
+                        <input type="text" value="14~17년 제주시 적설량 비교"> <!--chart name-->
+                    </div>
+                    <div class="widget-content" id="container"></div> <!--chart-->
+                </div><!--chart-->
                 <div class="panel left"><!--chart editmode:데이터개체-->
                     <div class="panel-title">
                         <span>필드 목록</span>
