- 위젯 삭제 버튼 추가

--- a/project/analyticsDashboard/detail.html
+++ b/project/analyticsDashboard/detail.html
@@ -14,7 +14,7 @@
             <ul>
                 <li class="left"><span class="fas fa-signal"></span></li>
                 <li class="middle back"><a href="index.html"><span>< Back</span></a></li>
-                <li class="right"><img src="./images/user.png"><span>김예진<span class="fas fa-caret-down"></span></span></li>
+                <li class="right"><span class="far fa-trash-alt"></span>&nbsp;DELETE</li>
             </ul>
         </header>
         <!--//header-->
